--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,7 @@
 - include: Debian.yml
   when: ansible_os_family == 'Debian'
+
+- name: certs created
+  command: letsencrypt certonly --standalone -d {{ fqdn }} -m {{ certbot_mail_address }}
+  args:
+    creates: "{{ certbot_live_home }}/{{ fqdn }}/fullchain.pem"
