[GH-6] make creation of certs optional

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,3 +5,4 @@
   command: letsencrypt certonly --standalone -d {{ fqdn }} -m {{ certbot_mail_address }}
   args:
     creates: "{{ certbot_live_home }}/{{ fqdn }}/fullchain.pem"
+  when: certbot_create_certs
