--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,9 @@
   args:
     creates: "{{ certbot_live_home }}/{{ fqdn }}/fullchain.pem"
   when: certbot_create_certs
+
+- name: renew certs every month
+  cron:
+    job: letsencrypt renew
+    month: */1
+  when: certbot_renew_certs
