--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,5 +10,5 @@
 - name: renew certs every month
   cron:
     job: letsencrypt renew
-    month: */1
+    month: '*/1'
   when: certbot_renew_certs
