[GH-6] fix 'fqdn' variable undefined

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: certs created
-  command: letsencrypt certonly --standalone -d {{ fqdn }} -m {{ certbot_mail_address }}
+  command: letsencrypt certonly --standalone -d {{ ansible_fqdn }} -m {{ certbot_mail_address }}
   args:
     creates: "{{ certbot_live_home }}/{{ fqdn }}/fullchain.pem"
   when: certbot_create_certs
