--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: certs created
   command: letsencrypt certonly --standalone -d {{ ansible_fqdn }} -m {{ certbot_mail_address }}
   args:
-    creates: "{{ certbot_live_home }}/{{ fqdn }}/fullchain.pem"
+    creates: "{{ certbot_live_home }}/{{ ansible_fqdn }}/fullchain.pem"
   when: certbot_create_certs
 
 - name: renew certs every month
