[GH-4] add name to cron to prevent that multiple duplicates will be created

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
 
 - name: renew certs every month
   cron:
+    name: renewCertbotCerts
     job: letsencrypt renew
     special_time: monthly
   when: certbot_renew_certs
