[GH-6] only stop nginx certs need to be created

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
   service:
     name: nginx
     state: stopped
-  when: certbot_fullchain_pem_register.stat.exists == false
+  when: (certbot_fullchain_pem_register.stat.exists == false) and certbot_create_certs
 
 - name: certs created
   command: letsencrypt certonly --standalone -d {{ ansible_fqdn }} -m {{ certbot_mail_address }} --agree-tos --noninteractive --text
