[GH-8] autorenew run it more frequently
[GH-9] force enter of mail address

[GH-8] fix 'ERROR! Syntax Error while loading YAML.'

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,7 @@
 certbot_create_certs: false
-certbot_mail_address: mail@example.com
+
 certbot_renew_certs: false
+certbot_renew_certs_minute: 12,45
+certbot_renew_certs_hour: 8
+certbot_renew_certs_month: '*/1'
+certbot_renew_certs_weekday: 1
