[GH-10] ensure that apt cache is updated to solve idempotence issue
[GH-10] ensure that apt cache is updated to solve idempotence issue - disable systemwide update cache

[GH-10] stop nginx, renew cert and start nginx

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,5 +26,5 @@
     hour: "{{ certbot_renew_certs_hour }}"
     month: "{{ certbot_renew_certs_month }}"
     weekday: "{{ certbot_renew_certs_weekday }}"
-    job: systemctl nginx stop && letsencrypt renew
+    job: /bin/systemctl stop nginx && /usr/bin/letsencrypt renew && /bin/systemctl start nginx
   when: certbot_renew_certs
