[GH-15] check whether port 80 is available
[GH-15] check what will happen if port 80 is listening

[GH-15] install netcat

[GH-15] let nc listen on background

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens

[GH-15] check whether port 80 listens for 10s

[GH-15] check for 10s whether port 80 is available

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,12 @@
     path: "{{ certbot_fullchain_pem }}"
   register: certbot_fullchain_pem_register
 
+- name: Check whether port 80 is available
+  wait_for:
+    port: 80
+    state: stopped
+    timeout: 10
+
 - name: certs created
   command: letsencrypt certonly --standalone -d {{ ansible_fqdn }} -m {{ certbot_mail_address }} --agree-tos --noninteractive --text
   args:
