--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,4 +6,4 @@ certbot_renew_certs_hour: 8
 certbot_renew_certs_month: '*/1'
 certbot_renew_certs_weekday: 1
 
-certbot_waitfor_port: 3
+certbot_waitfor_port_seconds: 3
