--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
   wait_for:
     port: 80
     state: stopped
-    timeout: "{{ certbot_waitfor_port }}"
+    timeout: "{{ certbot_waitfor_port_seconds }}"
 
 - name: certs created
   command: letsencrypt certonly --standalone -d {{ ansible_fqdn }} -m {{ certbot_mail_address }} --agree-tos --noninteractive --text
