[#19] replace let's encrypt with certbot
[#19] certbot could not be found

[#19] Could not bind TCP port 443 because it is already in use by another process

[#19] improved rational regarding 443 needs to be available and use certbot instead of letsencrypt to create certs

[#19] syntax error

[#19] syntax error ':'

[#19] allow creation of multiple certs

[#19] syntax error

[#19] ensure that certbot will not be run if fullchain exists

[#19] create-certs multiple domains failed due to incorrect list

[#19] make it possible to overwrite renew job so it is possible to define a command that stops the browser that listens to 443

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,4 +1,13 @@
-- name: letsencrypt installed
+- name: software-properties-common installed
   apt:
-    name: letsencrypt
+    name: software-properties-common
+    state: latest
+
+- name: certbot ppa added
+  apt_repository:
+    repo: 'ppa:certbot/certbot'
+
+- name: certbot installed
+  apt:
+    name: certbot
     state: latest
